--- a/src/app/contact/multiStepForm.module.css
+++ b/src/app/contact/multiStepForm.module.css
@@ -3,3 +3,53 @@
   width: 100% !important;
   outline: none;
 }
+/* You can include these in your Tailwind configuration if they are not already defined */
+
+.bg-gray-800 {
+  background-color: #333;
+}
+
+.bg-gray-700 {
+  background-color: #444;
+}
+
+.bg-gray-600 {
+  background-color: #555;
+}
+
+.bg-gray-300 {
+  background-color: #e2e8f0;
+}
+
+.bg-white {
+  background-color: #ffffff;
+}
+
+.text-gray-200 {
+  color: #f5f5f5;
+}
+
+.text-black {
+  color: #000000;
+}
+
+.text-white {
+  color: #ffffff;
+}
+
+.border-gray-600 {
+  border-color: #555;
+}
+
+.border-gray-300 {
+  border-color: #e2e8f0;
+}
+
+.hover\:shadow-lg:hover {
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.accent-gray-200 {
+  accent-color: #f5f5f5;
+}
